fixed header/nav so that it does not appear behind other elements

--- a/Assets/styles/style.css
+++ b/Assets/styles/style.css
@@ -29,6 +29,7 @@ header {
     position: fixed;
     width: 100%;
     opacity: 0.9;
+    z-index: 1;
 }
 
 footer {
